# nuro

./: .gitignore  .pre-commit-config.yaml  README.md  db.json  main.py  pyproject.toml
commands/: list.py  task.py
db/: db.py
models/: task.py
nuro/: main.py
nuro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nuro/commands/: clean_up.py  list.py  task.py
nuro/models/: list.py
tests/: test_commands.py
utils/: datetime_util.py
