[project]
name = "nuro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "rich>=14.1.0",
    "tinydb>=4.8.2",
    "typer>=0.16.0",
]

[project.scripts]
nuro = "nuro.main:app"

[tool.setuptools.packages.find]
include = ["db", "models", "commands", "nuro"]
